turtleart.diskfourth.DiskFourth.scala.error
Compilation error:
DiskFourth:14: error: value foreach is not a member of Int
      for(j<-90){
             ^